--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,11 @@ footer {
   }
 }
 
+footer .copyright p {
+  padding: 0;
+  margin: 0;
+}
+
 footer .social a {
   font-size: 1.2rem;
 }
